# project_xor

./: .bash_history  .gitignore  Project_XOR.ipynb  README.md  environment-cpu.yml  environment-gpu.yml  environment.yml  pyproject.toml  requirements.txt
proj_xor/: #utils.py#  __main__.py  models.py  utils.py
proj_xor/data/: __init__.py  get_data.py
proj_xor/data/datasets/: test_data.txt  training_data.txt
proj_xor/data/outputs/: accuracy.csv  loss.csv
proj_xor/plots/: .#plot_data.py  __init__.py  gen_plots.py  plot_data.py  plot_metrics.py
